--- a/index.html
+++ b/index.html
@@ -18,12 +18,33 @@
 
         </div>
 
+        <div class="container">
+            <div class="instrucoes">
+                <div class="imagens"></div>
+
+                <div class="textos">TEXTO</div>
+            </div>
+
+            <div class="instrucoes">
+                <div class="textos">TEXTO2</div>
+                <div class="imagens"></div>
+            </div>
+
+            <div class="instrucoes">
+                <div class="imagens"></div>
+
+                <div class="textos">TEXTO3</div>
+            </div>
+
+            <div class="instrucoes">
+                <div class="textos">TEXTO4</div>
+                <div class="imagens"></div>
+            </div>
 
 
 
 
-
-
+        </div>
 
     </div>
 </body>
